# 3dhead

./: CMakeLists.txt  OPTIMISED.md  main.cpp
output/: 1head_texture_render.tga  4head_texture_render.tga  5head_texture_render.tga  head_random.tga  head_with_texture.tga  head_with_texture11.tga  head_with_texture12.tga  head_with_texture13.tga  head_with_texture2.tga  head_with_texture3.tga  head_with_texture4.tga  head_with_texture5.tga  head_with_texture6.tga  head_with_texture7.tga  head_with_texture9.tga  render_gouraud2.tga  render_gouraud3.tga  render_gouraud5.tga  render_gouraud6.tga
